--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ repositories {
 	jcenter()
 }
 
-apply plugin: 'java'
+apply plugin: 'java-library'
 
 sourceCompatibility=JavaVersion.VERSION_1_8
 version='1.0'
